#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(test, 1.0, [chen.kenyy@inventec.com])
AC_CONFIG_SRCDIR([test.c])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign dist-xz])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile])
